--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <header class="header">
     <div class="circle" id="circle"></div>
   </header>
+  <section class="outer-container">
+    <div class="inner-larger-div">
+    </div>
+    <div class="small-content1"></div>
+    <div class="small-content2"></div>
+    <div class="smaller-inner-container">
+    </div>
+  </section>
   <script src="scripts/script.js"></script>
 </body>
 </html>
